PYTHON/lec1.txt
truth value
true false all +ve and -ve values will be considered as true
false 0, false, " " (any empty container will be considered as false), None is also considered as false

the priority of logical operators is less than arithmatic, relational, identity, membership operators

eg for OR operator

a=10
b=20
c=30

a>5 AND c<40
result will be TRUE

a%5==0 and c%5==0
result will be true

short cicuit evaluation
exp1 AND exp2 > if exp1 is false then it will not check for exp2
exp1 OR exp2 > if exp1 is true then it will not check for exp2



DUMP>>>>>>
    a = 10

b = 20

c = 30

a>5 AND c<40
  File "<ipython-input-4-4909619f2615>", line 1
    a>5 AND c<40
          ^
SyntaxError: invalid syntax




a>5 and c<40
Out[5]: True

s1 = "Python"

s2 = "Golang"

"n" in s1 and "n" in s2
Out[8]: True

"G" in s1 or "P" in s2
Out[9]: False

"P" in s1 or "P" in s2
Out[10]: True

d = None

a and b or d
Out[12]: 20

a or b and d
Out[13]: 10

(a or b) and d

a and d


b and d

(a or b) and d

a or b
Out[18]: 10

10 and d

a and b
Out[20]: 20

20 or d
Out[21]: 20

" " and None

"Python" and None

not a
Out[24]: False
not a
Out[24]: False

not a > b
Out[25]: True

not (c>b and c>a) and (a>b)
Out[26]: False

c>b and c>a
Out[27]: True

c and b and a
Out[28]: 10

a>b and a>c or b>a and b>c or c>a and c>b
Out[29]: True

a<b and a<c or b<a and b<c or c<a and c<b
Out[30]: True

1) sequence
2) if else
#colon is mandatory after the if expression
#!
a=10
b=20
c=30
if a>b and a>c:
    print("a is largest, value is ",a)
elif b>c and b>a:
    print("b is largest, value is ",b)
elif c>a and c>b:
    print("c is largest, value is ",c)
else:
    if a==b and a==c:
        print("all are equal, values are ",a)
    elif a==c:
        print("a and c are equal, values are ",a)
    elif a==b:
        print("a and b are equal, values are ",a)
    elif b==c:
        print("b and c are equal, values are ",b)
    else:
        print("error")

pass : written in if block to skip that block


ASSIGNMENT
1 accept 3 numbers from user and find largest (check inputs and convert if necessary)
2 accept 3 numbers and print smallest
3 accept 2 numbers from user and print addition , substraction, division, multiplication, , Power, floor division, AND,OR,NOT